--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,9 @@ dependencies {
     }
     //쿼리 파라미터 로그 외부 라이브러리
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.1'
+    //google 간편로그인
+    //spring email
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.6.3'
 }
 
 tasks.named('test') {
