--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,9 @@ logging.level.org.hibernate.SQL=debug
 #logging.level.org.hibernate.type : SQL
 server.port=8080
 
+#jasypt
+jasypt.encryptor.bean = jasyptStringEncryptor
+
 #??? ??? ???
 spring.profiles.include=jwtToken
 
