#8 구글 소셜 로그인 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ jasypt.encryptor.bean = jasyptStringEncryptor
 #??? ??? ???
 spring.profiles.include=jwtToken
 
+#s3 ?? ?? ??
+logging.level.com.amazonaws.util.EC2MetadataUtils=error
